--- a/views/communitypanel.ejs
+++ b/views/communitypanel.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CQ</title>
+    <title>Commuinity Panel</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
             height: 60px;
 			background-color: #222D3C;
             color: #fff;
-            z-index: 999999999;
+            z-index: 9999999;
 		}
 		nav p {
             margin: 0;
@@ -67,6 +67,7 @@
             color:white;
             box-sizing: border-box;
             overflow:hidden;
+            z-index: 99;
 		}
 		.fa {
             color: #fff;
@@ -97,44 +98,63 @@
             height:100%;
             width: 10%;
         }
-
-        div h1{
-            margin:0;
-            font-size: 2em;
-            margin-top: 15px;
-            font-weight: 500;
-        }
-        *{
-            box-sizing: border-box;
-        }
-        div label{
-            transform: translateY(-50%,-50%);
-            font-weight: 600;
-            display: inline-block;
+        #community_header_div{
+            position: absolute;
+            top:60px;
             width: 100%;
-            margin-top: 15px;
-            cursor: default;
-            box-sizing: border-box;
+            padding-left: 100px;
+            background-color: #3ea7c1;
+            line-height: 50px;
         }
-        div input{
-            width:100%;
-            margin-top: 7px;
-            font-size: 1em;
-            height:30px;
-            padding:1px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
+
+        #body_internal_div{
+            padding:0;
+            margin:0;
+            position: absolute;
+            left: 14%;
+            top: 20%;
+            width: 72%;
+            height: 550px;
+            border: 1px solid #eeeeee;
+            box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
         }
-        div button{
-            margin-top: 30px;
-            padding: 9px 13px;
-            background: #4cae4c;
-            border:0;
-            border-color: #449d44;
+        .btn{
+            background: transparent;
+            border: 1px solid #fff;
+            width: 50px;
             color: #fff;
+            cursor: pointer;
+            margin-left: 10px;
+            margin-top: 2px;
         }
-        div button:hover{
-            background: #449d44;
+        #community_header_div button i {
+            padding: 0;
+            margin: 5px;
+            display: block;
+        }
+        #body_internal_header_div{
+            background-color: #3ea7c1;
+            line-height: 50px;
+            font-size: 16px;
+            color: #fff;
+            padding-left: 20px;
+        }
+        #create_button{
+            float: right;
+            display: inline-block;
+            padding: 6px 12px;
+            margin-bottom: 0;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 1.42857143;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            background: transparent;
+            border: 1px solid #fff;
+            color: #fff;
+            cursor: pointer;
+            margin: 10px 10px;
         }
         #profile_button{
             cursor: pointer;
@@ -142,109 +162,40 @@
             padding-left: 5px;
             padding-top: 5px;
             height: 60px;
+
         }
-
-.community-header-top{
-    width:100%;
-    background-image: linear-gradient(to bottom, #4ba2b7, #42a6be, #38aac6, #29adcd, #0fb1d5);
-    height: 106px;
-  }
-
-
-.communtiy-sub-head-div{
-  margin-top:65px;
-  margin-left:20px;
-  position:fixed;
-  height:100px;
-  width:100%;
-
-}
-.btn-default{
-  background-color:rgba(255,255,255,0.1);
-  color:#fff;
-  border:1px solid #fff;
-  margin-left:15px;
-  padding-top:10px;
-  padding-bottom:5px;
-  padding-left:0px;
-  padding-right:15px;
-}
-.btn-default:hover{
-  background-color:rgba(255,255,255,0.5);
-  color:#fff;
-  border:1px solid #fff;
-}
-.fa-users{
-    height:1px;
-    width:1px;
-}
-.fa-search{
-    height:1px;
-    width:1px;
-}
-.outer-body-div{
-  width:100%;
-  background: orange;
-  position:absolute;
-  left:50px;
-
-
-}
-#community-body-div{
-  position:absolute;
-  margin-top:70px;
-  left: 20%;
-  height: 320px;
-  width: 60%;
-  background: #fff;
-  color: #333;
-}
-#community-body-heading-div{
-  border-radius:0;
-  background-image: linear-gradient(to top, #4ba2b7, #42a6be, #38aac6, #29adcd, #0fb1d5);
-  height:50px;
-  margin:0px;
-  padding:0px;
-  width:100%;
-}
-.community-panel-btn{
-  color:#fff;
-  background:transparent;
-  border-color:#fff;
-  transition: all .4s ease;
-  -webkit-transition: all .4s ease;
-}
-.community-panel-btn:hover{
-  color:#fff;
-  background:transparent;
-  border-color:#fff;
-  text-decoration: none;
-}
+        #body-contents-community{
+          margin:5px;
+          border-top: 4px solid #eeeeee;
+          border-bottom: 4px solid #eeeeee;
+        }
+        #join-button{
+          float:right;
+        }
     </style>
 </head>
 <body>
     <% include partials/menu.html %>
-    <div class="outer-body-div" id="outer-body-div1">
-      <div class="community-header-top" id="community-body-inner-div">
-        <div class="communtiy-sub-head-div">
-          <a class="btn btn-default" href="/communtiy/communitypanel" aria-label="Panel">
-            <i class="fa fa-users" aria-hidden="true"></i>
-          </a>
-          <a class="btn btn-default" href="/communtiy/communitypanel" aria-label="List">
-            <i class="fa fa-search" aria-hidden="true"></i>
-          </a>
-        </div>
-      </div>
-      <div id="community-body-div">
-        <div id="community-body-heading-div">
-          <p style="color:white;margin-top:6px;font-weight:bold">My Communities</p>
-          <a href='/community/AddCommunity' class="btn btn-info community-panel-btn" style="float:right;margin:-35px 5px 0 0" id="createCommunity">Create</a>
-        </div>
-        <div id="community-body-panel-div">
-        </div>
-      <div>
+    <div id="community_header_div">
+        <button class="btn" id="community_panel"><i class="fa fa-group"></i></button>
+        <button class="btn" id="search_community_panel"><i class="fa fa-search"></i></button>
     </div>
+    <div id="body_internal_div">
+        <div id="body_internal_header_div">
+                My Communities
+                <button id="create_button">Create</button>
+        </div>
+        <div>
+          <%communtiydata.forEach(function(d) { %>
+            <div id="body-contents-community">
+              <img src=/<%=d.image%> id="community_list_icon" height=35px>
+              <input type="submit" value="Join" id="join-button"></input>
+              <p><a href="#"><%=d.comname%></a></p>
 
+            </div>
+          <%})%>
+        </div>
+    </div>
 </body>
 <script>
     var menu = document.getElementById("menu");
@@ -257,25 +208,30 @@
     }
     var create=document.getElementById("createCommunity");
     div[2].classList.add("active");
-    if("<%=data[0].role%>" == 'user')
-    {
-      console.log(1);
-      $("#create").remove();
-    }
+
+    var community_header_div = document.getElementById("community_header_div");
+    var create_button = document.getElementById("create_button");
+
+    create_button.addEventListener("click",function(){
+        window.location = '/community/AddCommunity'
+    });
+
+    var community_panel=document.getElementById("community_panel");
+    community_panel.addEventListener('click',function(event){
+      window.location = '/communtiy/communitypanel'
+    });
     $(document).ready(function(){
       $("#sideBtn").click(function(){
          if($("#menu").width() == 50){
             $("#menu").animate({width: '250px'},300);
-            console.log(1);
-            $("#body_internal_div").animate({left:'250px'},300);
-            console.log(2);
+            $("#body_internal_div").animate({left:'20%'},300);
+            $("#community_header_div").animate({'padding-left':'250px'},300);
          } else{
             $("#menu").animate({width: '50px'},300);
-            $("#body_internal_div").animate({left:'50px'},300);
+            $("#body_internal_div").animate({left:'14%'},300);
+            $("#community_header_div").animate({'padding-left':'100px'},300);
          }
       });
    });
-
-
 </script>
 </html>
