--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -17,120 +17,129 @@
 </div>
 <script>
 
-    var profile_button = document.getElementById("profile_button");
+  var roleFlag = 1, roleStr = "Switch As User";
+  var profile_button = document.getElementById("profile_button");
 
-    //Buttons on Left Navigation Drawer
-    var profile_button_left = document.getElementById('profile_button_left');
-    var add_user_button_left = document.getElementById('add_user_button_left');
-    var user_list_button = document.getElementById('user_list_button');
-    var community_list_button = document.getElementById('community_list_button');
-    var switch_user_button = document.getElementById('switch_user_button');
-    var tag_panel_button = document.getElementById('tag_panel_button');
-    var change_password_button = document.getElementById('change_password_button');
-    var logout_button = document.getElementById('logout_button');
+  //Buttons on Left Navigation Drawer
+  var profile_button_left = document.getElementById('profile_button_left');
+  var add_user_button_left = document.getElementById('add_user_button_left');
+  var user_list_button = document.getElementById('user_list_button');
+  var community_list_button = document.getElementById('community_list_button');
+  var switch_user_button = document.getElementById('switch_user_button');
+  var tag_panel_button = document.getElementById('tag_panel_button');
+  var change_password_button = document.getElementById('change_password_button');
+  var logout_button = document.getElementById('logout_button');
 
-    if("<%=data[0].role%>" == 'admin'){
-        profile_button.addEventListener("click",function(event){
-            window.location = '/profile'
-        })
+  if("<%=data[0].role%>" == 'admin' || "<%=data[0].role%>" == 'superadmin'){
+      profile_button.addEventListener("click",function(event){
+          window.location = '/profile'
+      })
 
-        profile_button_left.addEventListener("click",function(event){
-            window.location = '/<%= data[0].role%>/profile'
-        });
+      profile_button_left.addEventListener("click",function(event){
+          window.location = '/<%= data[0].role%>/profile'
+      });
 
-        change_password_button.addEventListener('click',function(event){
-            window.location = '/changePassword';
-        });
+      change_password_button.addEventListener('click',function(event){
+          window.location = '/changePassword';
+      });
 
-        add_user_button_left.addEventListener('click',function(event){
-            window.location = '/<%= data[0].role%>/adduser';
-        });
+      add_user_button_left.addEventListener('click',function(event){
+          window.location = '/<%= data[0].role%>/adduser';
+      });
 
-        tag_panel_button.addEventListener("click",function(event){
-            window.location = '/tag';
-        });
+      tag_panel_button.addEventListener("click",function(event){
+          window.location = '/tag';
+      });
 
-        user_list_button.addEventListener("click",function(event){
-            window.location = '/<%=data[0].role%>/userlist';
-        });
+      user_list_button.addEventListener("click",function(event){
+          window.location = '/<%=data[0].role%>/userlist';
+      });
 
-        community_list_button.addEventListener('click',function(){
-            window.location = '/community/communityList';
-        });
-    }
+      community_list_button.addEventListener('click',function(){
+          window.location = '/community/communityList';
+      });
 
-    switch_user_button.addEventListener("click",function(){
-        $.confirm({
-            title: 'Switch As User',
-            boxWidth: '25%',
-            theme: 'material',
-            // backgroundDismissAnimation: 'random',
-            useBootstrap: false,
-            content: 'Do you really want switch state...',
-            buttons: {
-                Yes: {
-                    btnClass: 'btn-green',
-                    action: function(){
+      switch_user_button.addEventListener("click",function(){
+          $.confirm({
+              title: roleStr,
+              boxWidth: '25%',
+              theme: 'material',
+              // backgroundDismissAnimation: 'random',
+              useBootstrap: false,
+              content: 'Do you really want switch state...',
+              buttons: {
+                  Yes: {
+                      btnClass: 'btn-green',
+                      action: function(){
+                          if(roleFlag) {
+                              roleStr = "Switch As Admin";
+                              roleFlag = 0;
+                              window.location = '/communtiy/communitypanel';
+                          } else {
+                              $("#add_user_button_left").css("display", "block");
+                              $("#user_list_button").css("display", "block");
+                              $("#tag_panel_button").css("display", "block");
+                              roleStr = "Switch As User";
+                              roleFlag = 1;
+                          }
+                      }
+                  },
+                  No: {
+                      btnClass: 'btn-red',
+                      action: function(){
+                      }
+                  }
+              }
+          });
+      })
+  }
 
-                    }
-                },
-                No: {
-                    btnClass: 'btn-red',
-                    action: function(){
+  logout_button.addEventListener("click",function(event){
+      $.confirm({
+          title: 'Confirm Logout',
+          boxWidth: '20%',
+          theme: 'supervan',
+          backgroundDismissAnimation: 'random',
+          useBootstrap: false,
+          content: 'Do you really want logout?',
+          buttons: {
+              Yes: function () {
+                  window.location = '/logout';
+              },
+              No: function () {
+              // $.alert('No');
+              }
+          }
+      });
+  });
 
-                    }
-                }
-            }
-        });
-    })
+  if("<%=data[0].role%>" == 'user'){
+      if("<%=data[0].dob%>" == ""){
+          $("#menu").css("display", "none");
+          $("#role_on_top").css("display","none");
+      }else{
+          $("#menu").css("display","block");
+          $("#role_on_top").remove();
+          $("#add_user_button_left").remove();
+          $("#user_list_button").remove();
+          $("#switch_user_button").remove();
+          $("#tag_panel_button").remove();
+      }
+      change_password_button.addEventListener('click',function(event){
+          window.location = '/changePassword';
+      });
 
-    logout_button.addEventListener("click",function(event){
-        $.confirm({
-            title: 'Confirm Logout',
-            boxWidth: '20%',
-            theme: 'supervan',
-            backgroundDismissAnimation: 'random',
-            useBootstrap: false,
-            content: 'Do you really want logout?',
-            buttons: {
-                Yes: function () {
-                    window.location = '/logout';
-                },
-                No: function () {
-                // $.alert('No');
-                }
-            }
-        });
-    });
+      profile_button.addEventListener("click",function(event){
+          window.location = '/profile'
+      })
 
-    if("<%=data[0].role%>" == 'user'){
-        if("<%=data[0].dob%>" == ""){
-            $("#menu").css("display", "none");
-            $("#role_on_top").css("display","none");
-        }else{
-            $("#menu").css("display","block");
-            $("#role_on_top").remove();
-            $("#add_user_button_left").remove();
-            $("#user_list_button").remove();
-            $("#switch_user_button").remove();
-            $("#tag_panel_button").remove();
-        }
-        change_password_button.addEventListener('click',function(event){
-            window.location = '/changePassword';
-        });
+      profile_button_left.addEventListener("click",function(event){
+          window.location = '/profile'
+      });
 
-        profile_button.addEventListener("click",function(event){
-            window.location = '/profile'
-        })
-
-        profile_button_left.addEventListener("click",function(event){
-            window.location = '/profile'
-        });
-
-        community_list_button.addEventListener('click',function(){
-            //window.location = '/community/communitylist';
-            window.location='/communtiy/communitypanel'
-            //alert('Community Button');
-        });
-    }
+      community_list_button.addEventListener('click',function(){
+          window.location = '/communtiy/communitypanel';
+          //alert('Hello I am community button');
+      });
+  }
 </script>
