--- a/views/tagslist.ejs
+++ b/views/tagslist.ejs
@@ -278,10 +278,12 @@
                 </thead>
                 <tbody>
 										<%tagdata.forEach(function(d) { %>
-											<td><%=d.tagname%></td>
+                      <tr>
+                      <td><%=d.tagname%></td>
 											<td><%=d.creator%></td>
 											<td><%=d.creationdate%></td>
 											<td>hello world</td>
+                      </tr>
 										<%})%>
                 </tbody>
         </table>
@@ -328,6 +330,7 @@
            }
        });
    });
+   console.log(tagdata);
 
 </script>
 </html>
