--- a/views/addcommunity.ejs
+++ b/views/addcommunity.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Commuinity Panel</title>
+    <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="/trumbowyg.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -114,11 +114,10 @@
             padding:0;
             margin:0;
             position: absolute;
-            left: 25%;
+            left: 35%;
             top: 20%;
-            width: 50%;
-            border: 1px solid #eeeeee;
-            box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
+            width: 30%;
+
             margin-bottom: 50px;
         }
         .btn{
@@ -143,6 +142,7 @@
         }
         h2 {
             margin: 0;
+            color:#707070;
         }
         #textInput {
             width: 100%;
@@ -194,6 +194,15 @@
           border: none;
           color: #fff;
         }
+        hr{
+          border-width: 1px;
+        }
+        #community_name_input {
+            width: 100%;
+            border-radius: 3px;
+            padding: 8px;
+            margin-bottom: 2%;
+        }
     </style>
 </head>
 <body>
@@ -205,6 +214,7 @@
     <div id="body_internal_div">
         <div class="content">
             <h2>Create Community</h2>
+            <hr noshade>
             <br>
             <input type="text" id="community_name_input" placeholder="Name">
             <br>
@@ -264,9 +274,9 @@
         newcommunity.descriptiontextarea = descriptiontextarea;
         newcommunity.createdate = date.getDate() + '/' + date.getMonth() + '/' + date.getFullYear();
         if(document.getElementById('direct').checked) {
-            newcommunity.membershiprule = "Direct";
+            newcommunity.membershiprule = "direct";
         }else if(document.getElementById('permission').checked) {
-            newcommunity.membershiprule = "Permission";
+            newcommunity.membershiprule = "permission";
         }
         var request = new XMLHttpRequest();
         request.open('POST','/community/AddCommunity');
@@ -292,11 +302,11 @@
       $("#sideBtn").click(function(){
          if($("#menu").width() == 50){
             $("#menu").animate({width: '250px'},300);
-            $("#body_internal_div").animate({left:'35%'},300);
+            $("#body_internal_div").animate({left:'40%'},300);
             $("#community_header_div").animate({'padding-left':'250px'},300);
          } else{
             $("#menu").animate({width: '50px'},300);
-            $("#body_internal_div").animate({left:'25%'},300);
+            $("#body_internal_div").animate({left:'35%'},300);
             $("#community_header_div").animate({'padding-left':'100px'},300);
          }
       });
