--- a/views/communitypanel.ejs
+++ b/views/communitypanel.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Commuinity Panel</title>
+    <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -113,10 +113,12 @@
             position: absolute;
             left: 14%;
             top: 20%;
-            width: 72%;
-            height: 550px;
+            width: 65%;
+            padding-bottom: 10px;
+            height: auto;
             border: 1px solid #eeeeee;
             box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
+            background-color: #FFFFFF;
         }
         .btn{
             background: transparent;
@@ -172,6 +174,72 @@
         #join-button{
           float:right;
         }
+        #community_panel{
+          margin-top:5px;
+        }
+        .my_community_div_class{
+            padding:0;
+            margin: 2px;
+            width: 99%;
+            background-color: #fff;
+            padding: 5px;
+            border-top: 1px solid rgb(200,200,200);
+            border-bottom: 1px solid rgb(200,200,200);
+            margin-top: 12px;
+            float: left;
+        }
+        .community_image_div_class{
+            width: 15%;
+            float: left;
+        }
+        .community_image_class{
+            height: 70px;
+            width: 70px;
+            border: 3px solid rgb(235, 235, 235);
+            font-size: 14px;
+            line-height: 1.42857143;
+            color: #333;
+            background-color: #fff;
+        }
+        .community_name_div{
+            padding: 0;
+            margin: 0;
+            margin-top: 25px;
+            color: #337ab7;;
+            font-weight: 600;
+            text-decoration: none;
+            word-wrap: break-word;
+            text-transform: capitalize;
+            float: left;
+            font-size: 14px;
+            line-height: 1.42857143;
+            margin-right: 20px;
+        }
+        .community_members_div{
+            padding: 0;
+            margin: 0;
+            margin-top: 25px;
+            color: #337ab7;;
+            font-weight: 600;
+            text-decoration: none;
+            word-wrap: break-word;
+            text-transform: capitalize;
+            font-size: 14px;
+            line-height: 1.42857143;
+            font-weight: 100;
+        }
+        a:link{
+          color:#337ab7;
+          text-decoration: none;
+        }
+        a:visited{
+          color:#337ab7;
+          text-decoration: none;
+        }
+        a:hover{
+          color:black;
+          text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -187,10 +255,11 @@
         </div>
         <div>
           <%communtiydata.forEach(function(d) { %>
-            <div id="body-contents-community">
-              <img src=/<%=d.image%> id="community_list_icon" height=35px>
-              <input type="submit" value="Join" id="join-button"></input>
-              <p><a href="#"><%=d.comname%></a></p>
+
+            <div class="my_community_div_class">
+                    <div class="community_image_div_class"><img src="/images/defaultcommunity.jpg" class="community_image_class"></div>
+                    <div class="community_name_div"><a href="#"><%=d.comname%></a></div>
+                    <div class="community_members_div"><%=d.communitymembers%> Members</div>
 
             </div>
           <%})%>
@@ -215,7 +284,10 @@
     create_button.addEventListener("click",function(){
         window.location = '/community/AddCommunity'
     });
-
+    var search_button=document.getElementById("search_community_panel");
+    search_button.addEventListener('click',function(event){
+      window.location = '/communtiy/communitypanellist'
+    });
     var community_panel=document.getElementById("community_panel");
     community_panel.addEventListener('click',function(event){
       window.location = '/communtiy/communitypanel'
