[Added Discussion Page and Updated  PanelList]

--- a/views/communitypanel.ejs
+++ b/views/communitypanel.ejs
@@ -258,7 +258,7 @@
 
             <div class="my_community_div_class">
                     <div class="community_image_div_class"><img src="/images/defaultcommunity.jpg" class="community_image_class"></div>
-                    <div class="community_name_div"><a href="#"><%=d.comname%></a></div>
+                    <div class="community_name_div"><a href="/community/discussion/<%=d._id%>"><%=d.comname%></a></div>
                     <div class="community_members_div"><%=d.communitymembers%> Members</div>
 
             </div>
