--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -162,7 +162,9 @@
 
       community_list_button.addEventListener('click',function(){
           // window.location = '/community/communityList';
-          alert('Hello I am community Panel button');
+          window.location = '/communtiy/communitypanel';
+
+          //alert('Hello I am community Panel button');
       });
 
   }
