--- a/Public/LoginStyle.css
+++ b/Public/LoginStyle.css
@@ -82,7 +82,7 @@ form{
     position: absolute;
     padding: 5px;
     transform: translateX(-50%);
-    width: 25%;
+    width: 8%;
     left: 50%;
     top: 65%;
     border: 1px solid rgb(170, 170, 170);
@@ -101,8 +101,9 @@ form{
 }
 #github_body_div{
     padding: 2px;
-    width: 20%;
+    width: 30%;
     height: 55px;
+    margin-left: 35%;
     margin-top: 6px;
 }
 #github_body_div:hover{
