--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -126,6 +126,8 @@
           color: #707070;
           border-bottom: 1px solid #eee;
           padding-bottom: 10px;
+          font-size: 24px;
+          font-weight: lighter;
       }
       #input_div{
           margin-top:4%;
@@ -141,14 +143,16 @@
           border-radius: 4px;
           box-sizing: border-box;
       }
-      h2{
+      h3{
           margin:0;
           padding:0;
+          color:#707070;
       }
       #button_div{
           display: inline-block;
           width: 100%;
           margin-top: 4%;
+          font-weight: lighter;
       }
       #submit_tag_button{
           color: #fff;
@@ -201,7 +205,7 @@
   <div id='body_outer_div'>
       <div id="body_internal_div">
           <div id='create_tag_text'>
-              <h2>Create Tag</h2>
+              <h3>Create Tag</h3>
           </div>
           <div id="input_div">
               <input type="text" placeholder="Tag Name" id="create_tag_input">
